--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,7 +1,11 @@
+---
 name: Latest blog post workflow
+
 on:
   schedule:
     - cron: '0 * * * *'  # Runs every hour
+  workflow_dispatch:
+
 jobs:
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
